--- a/Wiki/NES/Dragon_Warrior_IV/index.wikitext
+++ b/Wiki/NES/Dragon_Warrior_IV/index.wikitext
@@ -126,6 +126,8 @@ Temporary party members that join in specific chapters:
 * [[Dragon Warrior IV:TBL|Text Table]] - Character encoding
 * [[Dragon Warrior IV:Values|Values]] - Game constants and IDs
 * [[Dragon Warrior IV:Map_List|Map List]] - Location ID reference
+* [[Dragon Warrior IV:Battle_System|Battle System]] - AI tactics and combat mechanics
+* [[Dragon Warrior IV:EXP_System|EXP System]] - Experience calculation formulas
 
 ==Known Dumps==
 
