--- a/Wiki/NES/Dragon_Warrior_IV/Map_List.wikitext
+++ b/Wiki/NES/Dragon_Warrior_IV/Map_List.wikitext
@@ -1,78 +1,367 @@
-{{subpage}}
+{{DISPLAYTITLE:Dragon Warrior IV - Map List}}
 
-== Map List for Dragon Warrior IV ==
-<pre>
-00 = Keeleon
-01 = Santeem
-02 = Burland
-03 = Dire Palace
-04 = Endor
-05 = Bonmalmo
-06 = Branca
-07 = Soretta
-08 = Gardenbur
-09 = Stancia
-0A = Aktemto
-0B = Riverton
-0C = Bazaar
-0D = Mintos
-0E = Tempe
-0F = Frenor
-10 = Aneaux
-11 = Haville
-12 = Izmit
-13 = Surene
-14 = Hometown
-15 = Monbaraba
-16 = Lakanaba
-17 = Kievs
-18 = Foxville
-19 = Seaside Village
-1A = Gottside
-1B = Rosaville
-1C = Secret Playground Entrance
-1D = House of Prophecy
-1E = Shrine to Endor
-1F = Shrine northwest of Endor
-20 = Woodsman's Shack
-21 = Desert Inn
-22 = Small Medal King
-23 = Shrine North of Soretta
-24 = Small Island Shack
-25 = Royal Crypt Entrance
-26 = Last Refuge
-27 = SW barrier shrine (Gigademon)
-28 = SE barrier shrine (Anderoug)
-29 = NW barrier shrine (Infurnus Shadow)
-2A = Final Cave (Entrance in underworld)
-2B = Travel Door near Riverton
-2C = Shrine of Colossus (outside)
-2D = Aktemto Mine (Dungeon)
-2E = Shrine of Breaking Waves
-2F = Padaquea Cave
-30 = Bakor's Hideout
-31 = Sphere Of Silence Cave
-32 = Golden Bracelet Cave
-33 = Secret Playground Dungeon
-34 = Cascade Cave
-35 = Final Cave
-36 = Iron Safe Cave
-37 = Cave of Betrayal
-38 = Silver Statuette Cave
-39 = Branca-Izmit tunnel
-3A = Tunnel between Branca and Endor
-3B = Royal Crypt Dungeon
-3C = Necrosaro's Lair
-3D = Zenethian Tower
-3E = Outside Zenethia
-3F = Birdsong Tower
-40 = World Tree
-41 = Loch Tower
-42 = Lighthouse
-43 = Konenber
-44 = NE barrier shrine (Radimvice)
-45 = Necrosaro's Palace
-46 = Zenethia
-47 = Shrine of the Horn
-48 = Shrine of Colossus (Dungeon)
-</pre>
+This page documents all map locations in Dragon Warrior IV for the NES.
+
+==Map System Overview==
+
+Maps in DW4 are organized into map groups, each containing multiple submaps. Map data is stored primarily in Bank $09.
+
+===Map ID Format===
+{| class="wikitable"
+|-
+! Bits !! Description
+|-
+| 7-4 || Submap index within map group
+|-
+| 3-0 || Map group ID
+|}
+
+==Map Groups ($00-$48)==
+
+===Towns and Castles===
+
+{| class="wikitable sortable"
+|-
+! ID !! Name !! Bank !! Submaps !! Chapter
+|-
+| $00 || Keeleon || $09 || 5 || 4, 5
+|-
+| $01 || Santeem || $09 || 3 || 2, 5
+|-
+| $02 || Burland || $09 || 4 || 1, 5
+|-
+| $03 || Dire Palace || $09 || 4 || 4, 5
+|-
+| $04 || Endor || $09 || 15 || 2, 3, 5
+|-
+| $05 || Bonmalmo || $09 || 2 || 3
+|-
+| $06 || Branca || $09 || 4 || 2, 5
+|-
+| $07 || Soretta || $09 || 2 || 5
+|-
+| $08 || Gardenbur || $09 || 5 || 5
+|-
+| $09 || Stancia || $09 || 8 || 5
+|-
+| $0a || Aktemto || $09 || 1 || 5
+|-
+| $0b || Riverton || $09 || 2 || 5
+|-
+| $0c || Bazaar || $09 || 1 || 3, 5
+|-
+| $0d || Mintos || $09 || -- || 4, 5
+|-
+| $0e || Tempe || $09 || -- || 2
+|-
+| $0f || Frenor || $09 || -- || 2
+|-
+| $10 || Aneaux || $09 || -- || 4, 5
+|-
+| $11 || Haville || $09 || -- || 4, 5
+|-
+| $12 || Izmit || $09 || -- || 5
+|-
+| $13 || Surene || $09 || -- || 2
+|-
+| $14 || Hometown || $09 || -- || 5
+|-
+| $15 || Monbaraba || $09 || -- || 4, 5
+|-
+| $16 || Lakanaba || $09 || -- || 3, 5
+|-
+| $17 || Kievs || $09 || -- || 1
+|-
+| $18 || Foxville || $09 || -- || 3
+|-
+| $19 || Seaside Village || $09 || -- || 5
+|-
+| $1a || Gottside || $09 || -- || 5
+|-
+| $1b || Rosaville || $09 || -- || 5
+|}
+
+===Shrines and Special Locations===
+
+{| class="wikitable sortable"
+|-
+! ID !! Name !! Notes
+|-
+| $1c || Secret Playground Entrance || Hidden area
+|-
+| $1d || House of Prophecy || Story location
+|-
+| $1e || Shrine to Endor || Travel shrine
+|-
+| $1f || Shrine NW of Endor || Travel shrine
+|-
+| $20 || Woodsman's Shack || Ragnar story
+|-
+| $21 || Desert Inn || Rest stop
+|-
+| $22 || Small Medal King || Prize exchange
+|-
+| $23 || Shrine North of Soretta || Travel shrine
+|-
+| $24 || Small Island Shack || --
+|-
+| $25 || Royal Crypt Entrance || Dungeon entrance
+|-
+| $26 || Last Refuge || Final chapter
+|-
+| $27 || SW Barrier Shrine || Gigademon boss
+|-
+| $28 || SE Barrier Shrine || Anderoug boss
+|-
+| $29 || NW Barrier Shrine || Infurnus Shadow boss
+|-
+| $2a || Final Cave Entrance || Underworld access
+|-
+| $2b || Travel Door near Riverton || --
+|-
+| $2c || Shrine of Colossus (Outside) || Quest location
+|-
+| $44 || NE Barrier Shrine || Radimvice boss
+|-
+| $47 || Shrine of the Horn || Quest item
+|}
+
+===Dungeons===
+
+{| class="wikitable sortable"
+|-
+! ID !! Name !! Boss/Notable
+|-
+| $2d || Aktemto Mine || Zenithian Helm
+|-
+| $2e || Shrine of Breaking Waves || Quest location
+|-
+| $2f || Padequia Cave || Medicine quest
+|-
+| $30 || Bakor's Hideout || Chapter 4
+|-
+| $31 || Sphere of Silence Cave || Quest item
+|-
+| $32 || Golden Bracelet Cave || Quest item
+|-
+| $33 || Secret Playground Dungeon || Hidden area
+|-
+| $34 || Cascade Cave || Zenithian Sword
+|-
+| $35 || Final Cave || Final dungeon
+|-
+| $36 || Iron Safe Cave || Chapter 3
+|-
+| $37 || Cave of Betrayal || Chapter 3
+|-
+| $38 || Silver Statuette Cave || Quest item
+|-
+| $39 || Branca-Izmit Tunnel || Connection
+|-
+| $3a || Branca-Endor Tunnel || Connection
+|-
+| $3b || Royal Crypt || Chapter 5
+|-
+| $3c || Necrosaro's Lair || End area
+|-
+| $48 || Shrine of Colossus (Dungeon) || Quest dungeon
+|}
+
+===Towers===
+
+{| class="wikitable sortable"
+|-
+! ID !! Name !! Notable
+|-
+| $3d || Zenithian Tower || Access to Zenithia
+|-
+| $3f || Birdsong Tower || Quest item
+|-
+| $40 || World Tree || Leaf location
+|-
+| $41 || Loch Tower || Chapter 4
+|-
+| $42 || Lighthouse || Chapter 3
+|}
+
+===Special Locations===
+
+{| class="wikitable sortable"
+|-
+! ID !! Name !! Access
+|-
+| $3e || Outside Zenithia || Tower exit
+|-
+| $43 || Konenber || Optional
+|-
+| $45 || Necrosaro's Palace || Final boss
+|-
+| $46 || Zenithia || Sky castle
+|}
+
+==Detailed Submap Data==
+
+===Keeleon ($00)===
+
+{| class="wikitable"
+|-
+! Submap !! Name !! Address
+|-
+| $00 || Outside || $8000
+|-
+| $01 || F1 || $8085
+|-
+| $02 || F2 || $812b
+|-
+| $03 || F3 || $81ae
+|-
+| $04 || B1, Jail || $81c1
+|}
+
+===Santeem ($01)===
+
+{| class="wikitable"
+|-
+! Submap !! Name !! Address
+|-
+| $00 || F1 || $8206
+|-
+| $01 || F2 || $82dd
+|-
+| $02 || F3 || $8344
+|}
+
+===Burland ($02)===
+
+{| class="wikitable"
+|-
+! Submap !! Name !! Address
+|-
+| $00 || Town || $8398
+|-
+| $01 || Castle, F1 || $850c
+|-
+| $02 || Castle, F2 || $85de
+|-
+| $03 || Flora's House F2 / Armor Shop F2 || $865d
+|}
+
+===Dire Palace ($03)===
+
+{| class="wikitable"
+|-
+! Submap !! Name !! Address
+|-
+| $00 || F1 || $869b
+|-
+| $01 || F2 || $87b5
+|-
+| $02 || B1, Kitchen/Jail / 4-Chest Room || $8834
+|-
+| $03 || B1, Tomb || $88cf
+|}
+
+===Endor ($04)===
+
+{| class="wikitable"
+|-
+! Submap !! Name !! Address
+|-
+| $00 || Town || $88e7
+|-
+| $01 || Casino/Monster Arena || $8a45
+|-
+| $02 || Castle, F1 || $8aab
+|-
+| $03 || Bottom-right building, F1 || $8b7d
+|-
+| $04 || Middle-right building, F1 || $8b96
+|-
+| $05 || Castle, B1 || $8bb5
+|-
+| $06 || Castle, F2 (throne room) || $8c04
+|-
+| $07 || Back Castle, Arena || $8c77
+|-
+| $08 || Taloon's Shop, F2 || $8dd6
+|-
+| $09 || Bottom-right building, F2 || $8df4
+|-
+| $0a || Middle-right building, F2 || $8e0f
+|-
+| $0b || Inn, F2 || $8e2c
+|-
+| $0c || Castle, F3 (chamber) || $8e5a
+|-
+| $0d || Castle, secret door, F2-F5 || $8e92
+|-
+| $0e || Back Castle, F2 || $8ec9
+|}
+
+===Gardenbur ($08)===
+
+{| class="wikitable"
+|-
+! Submap !! Name !! Address
+|-
+| $00 || Entrance || $9313
+|-
+| $01 || Castle || $93c9
+|-
+| $02 || F2 || $9492
+|-
+| $03 || Top-Left B1, Jail / Middle B1 || $9506
+|-
+| $04 || Top-Right B1, Flowers || $9544
+|}
+
+===Stancia ($09)===
+
+{| class="wikitable"
+|-
+! Submap !! Name !! Address
+|-
+| $00 || Town || $9563
+|-
+| $01 || Castle, Entrance || $963a
+|-
+| $02 || Castle, F1, Interior || $9728
+|-
+| $03 || Castle, F1 Front / F2 || $97a8
+|-
+| $04 || Castle, F3, Throne Room || $984b
+|-
+| $05 || Restaurant || $98b4
+|-
+| $06 || Church || $98d8
+|-
+| $07 || Top-right house, F2 || $9931
+|}
+
+==Memory Layout==
+
+===Current Map RAM===
+{| class="wikitable"
+|-
+! Address !! Description
+|-
+| $00a9 || Current map group ID
+|-
+| $00aa || Current submap ID
+|-
+| $00ab || Map flags
+|}
+
+==See Also==
+
+* [[Dragon Warrior IV:ROM_Map|ROM Map]] - Bank $09 map data
+* [[Dragon Warrior IV:Enemies|Enemies]] - Encounter zones
+* [[Dragon Warrior IV:Items|Items]] - Treasure locations
+
+==Source==
+
+Map data from:
+* [https://github.com/TheAnsarya/dragon-warrior-4-info/blob/main/data/maps.json DW4 maps.json]
+
+[[Category:Dragon Warrior IV]]
+[[Category:Maps]]
